# HODEditorJS

./: .gitignore  AGENTS.md  README.md  TODO.md  delete_dxt_blocks.py  extract_tools.py  fix_exports.py  inject_export.py  inject_handle_add.py  inject_inspector.py  out.txt  out_inspector.txt  out_tree.txt  package-lock.json  package.json  patch.py  patch_fixes.py  patch_hod_textures.py  patch_inspector.py  patch_inspector_final.py  patch_inspector_v2.py  patch_lmip_matt.py  patch_materials_tab.py  patch_mip_chain.py  patch_proxy.py  patch_scale.py  patch_texpresso.py  scratch.rs  suggestions.md  test_fenris_anim.js
agents_info/: hod2_reverse_engineering_knowledge_base.md
agents_info/pebble_0_crash_investigation/: initial_investigation.md  progress_log.md
docs/: README.md
docs/agent-handbook/: README.md  hod2_reverse_engineering_knowledge_base.md
docs/hod2-reverse-engineering/: PROGRESS.md  (+13 more)
parser/: Cargo.toml  check_cold.rs  check_output.txt  compare.py  compare_pebble.py  dump_joints_dae.rs  dump_mult_v2.py  dump_stat.rs  dump_tags.rs  edited_pool.txt  err.txt  hgn_probe.txt  hodor.txt  orig_pool.txt  original.txt  parse_debug.rs  parse_debug2.rs  parse_debug_scene.rs  pebble_0_generate_v2.hod  pebble_0_rebuilt.hod  pebble_verify.txt  pool_dae2.txt  pool_hodor.txt  test_mat  test_mat.rs  test_out.hod  test_texpresso.rs  update_progress.sh
parser/src/: collision.rs  compiler.rs  dae.rs  dds_encode.rs  hod.rs  kdop.rs  lib.rs  obj.rs  texture_packer.rs  xpress.rs
src/: App.tsx  texture_utils.ts
src-tauri/: tauri.conf.json
testing/: manual_tests.md
(+54 files in other folders)
