[package]
name = "hwr_hod_parser"
version = "0.1.0"
edition = "2021"
description = "Native Homeworld Remastered HOD and IFF parsing engine"

[dependencies]
byteorder = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png", "tga", "jpeg"] }
base64 = "0.22.1"
roxmltree = "0.21.1"
meshopt = "0.6.2"

[[bin]]
name = "compare_burns"
path = "src/bin/compare_burns.rs"
